Bug 304323 - Recently accessed items in Dolphin (KDE 4.9.0) uses OpenSuSE specific package_utility_time icon
Summary: Recently accessed items in Dolphin (KDE 4.9.0) uses OpenSuSE specific package...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: panels: places (other bugs)
Version First Reported In: 2.1.80
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL: http://kde.org/announcements/announce...
Keywords:
: 305216 (view as bug list)
Depends on:
Blocks: extramile
  Show dependency treegraph
 
Reported: 2012-07-31 10:24 UTC by Bastian Beischer
Modified: 2013-08-22 09:35 UTC (History)
8 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.2
Sentry Crash Report:


Attachments
Screenshot showing the correct Nepomuk places in Dolphin (29.93 KB, image/png)
2012-11-27 10:54 UTC, Elias Probst
Details
Icons still missing in KDE 4.11 (6.46 KB, image/jpeg)
2013-08-19 10:36 UTC, Ulrich Lichtenegger
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Bastian Beischer 2012-07-31 10:24:01 UTC
I think they recently accessed items "Today, Yesterday, This Month and Last Month" use the "package_utility_time" icon which seems to be present in opensuse, but is not in for example Arch Linux. There should be an official icon for this, maybe from oxygen?

Reproducible: Always

Steps to Reproduce:
1. Install KDE 4.9 RC2 on Arch Linux
2. Open Dolphin
3. Check icons for Recently Accessed items
Actual Results:  
Icons are replaced by the white "not-found" dummy icon with the question mark.

Expected Results:  
Should show a proper icon.
Comment 1 Elias Probst 2012-08-02 10:44:20 UTC
This problem does also exist on Gentoo (and probably any other non-OpenSuSE distribution, too).

The icon package_utility_time.png cannot be found in any KDE release and googling for it shows only OpenSuSE related matches, so it looks like the author wrongly picked an OpenSuSE specific icon of which he might have thought it would be an KDE icon.

KDE provides the icon actions/chronometer which looks similar and could be used here.
Comment 2 Frank Reininghaus 2012-08-07 15:40:39 UTC
Thanks for the bug report! I agree that this should be changed.
Comment 3 Frank Reininghaus 2012-08-09 21:43:55 UTC
Git commit d7e7ca53bb95c7555bbf107d92b47ac25eda1918 by Frank Reininghaus.
Committed on 09/08/2012 at 23:38.
Pushed by freininghaus into branch 'KDE/4.9'.

Use a better icon for recently accessed items in the Places Panel

The problem with the icon "package_utility_time" that has been used
before was that it is not available on all distros. The new icon
"actions/chronometer" should be available on every KDE install.

Thanks to Elias Probst for suggesting the new icon - I'm not that
familiar with the icons provided by KDE myself.
FIXED-IN: 4.9.1

M  +1    -1    dolphin/src/panels/places/placesitem.cpp

http://commits.kde.org/kde-baseapps/d7e7ca53bb95c7555bbf107d92b47ac25eda1918
Comment 4 Frank Reininghaus 2012-08-09 21:56:33 UTC
Git commit a2deeadb7ad5b0428702e6fd434175d861b82944 by Frank Reininghaus.
Committed on 09/08/2012 at 23:52.
Pushed by freininghaus into branch 'KDE/4.9'.

Follow-up to d7e7ca53bb95c7555bbf107d92b47ac25eda1918 - use correct icon

I overlooked that "actions/" is not part of the icon name. Just
rebuilding and re-running Dolphin did not reveal this issue, it seems
that the old icon "package_utility_time" was still cached somewhere.

I hope that it really works on all distros now.

M  +1    -1    dolphin/src/panels/places/placesitem.cpp

http://commits.kde.org/kde-baseapps/a2deeadb7ad5b0428702e6fd434175d861b82944
Comment 5 Frank Reininghaus 2012-08-09 21:57:56 UTC
Git commit a97f5d3a10483a3a71847d6459c96ef6dcc9332a by Frank Reininghaus.
Committed on 09/08/2012 at 23:38.
Pushed by freininghaus into branch 'master'.

Use a better icon for recently accessed items in the Places Panel

The problem with the icon "package_utility_time" that has been used
before was that it is not available on all distros. The new icon
"chronometer" should be available on every KDE install.

Thanks to Elias Probst for suggesting the new icon - I'm not that
familiar with the icons provided by KDE myself.
(cherry picked from commit d7e7ca53bb95c7555bbf107d92b47ac25eda1918)

M  +1    -1    dolphin/src/panels/places/placesitem.cpp

http://commits.kde.org/kde-baseapps/a97f5d3a10483a3a71847d6459c96ef6dcc9332a
Comment 6 Jekyll Wu 2012-08-16 01:13:20 UTC
*** Bug 305216 has been marked as a duplicate of this bug. ***
Comment 7 Frank Reininghaus 2012-08-16 09:10:07 UTC
David found out (see bug 305216) that the incorrect icon name is used in more places than I thought. I think we should just replace also the remaining "package_utility_time" by "chronometer".
Comment 8 Jeroen van Meeuwen (Kolab Systems) 2012-08-24 16:19:48 UTC
Resetting assignee to default as per bug #305719
Comment 9 Frank Reininghaus 2012-09-11 17:27:57 UTC
Git commit d86ec02b684fad73f7aa55654681773efd851709 by Frank Reininghaus.
Committed on 11/09/2012 at 19:25.
Pushed by freininghaus into branch 'KDE/4.9'.

Use a better icon for recently accessed items, part 2

I had missed one places where the incorrect icon was used in my
previous commit d7e7ca53bb95c7555bbf107d92b47ac25eda1918.
FIXED-IN: 4.9.2

M  +1    -2    dolphin/src/panels/places/placesitemmodel.cpp

http://commits.kde.org/kde-baseapps/d86ec02b684fad73f7aa55654681773efd851709
Comment 10 Elias Probst 2012-11-21 20:46:33 UTC
Looking at the announcement screenshot of KDE 4.10 beta 1, it looks like this bug does still exist:
http://kde.org/announcements/announce-4.10-beta1.png

REOPENing this bug…
Comment 11 David Edmundson 2012-11-21 23:57:52 UTC
grep shows it's not using this.  Also it works fine as a new user.

I think if you had 4.9 then upgrade, you'll still have the broken icons.
Comment 12 Frank Reininghaus 2012-11-22 12:47:51 UTC
In KDE 4.10, we use different icons for the different 'timeline' places:

https://git.reviewboard.kde.org/r/106874/

AFAIK, they are in oxygen-icons. I can't test it at the moment, so I don't know what's going wrong. Do we actually have any evidence that this bug is reproducible except for that screenshot?
Comment 13 Elias Probst 2012-11-22 13:26:00 UTC
(In reply to comment #12)
> Do we actually have any evidence that this bug is reproducible except for that screenshot?

I'm just building 4.9.80/4.10 beta1 which might take ~3 hours, then I'll be able to confirm.
Comment 14 Elias Probst 2012-11-22 22:55:23 UTC
The problem persists with 4.9.80 using my already existing account.
Cannot reproduce using a new account, as the corresponding items don't appear in Dolphin's places panel at all, although Nepomuk is enabled, running, finished indexing… I even re-started the KDE session.

Does anyone know why?
Comment 15 Frank Reininghaus 2012-11-24 17:45:19 UTC
OK, I can confirm. If the 'old' icons are in kfileplaces/bookmarks.xml, the 'new' icons are not applied. You can work around the issue manually by removing the "timeline:" entries from that file, but I see that this should better be fixed inside Dolphin. In principle, it would be better if we opened a new report about that, because this is unrelated to the issue that this report was about. Recycling of old reports for new problems makes bug reports unreadable in the long term.

About the problem you see when you create a new user: no idea, sorry.
Comment 16 Frank Reininghaus 2012-11-25 11:13:50 UTC
Thinking about it again, I think that there is no good solution for the problem. If we change the icons in kfileplaces/bookmarks.xml, we also overwrite any custum icons that the user has chosen for the "timeline" entries. This is obviously not an option.
Comment 17 Frank Reininghaus 2012-11-27 06:14:55 UTC
(In reply to comment #14)
> Cannot reproduce using a new account, as the corresponding items don't
> appear in Dolphin's places panel at all, although Nepomuk is enabled,
> running, finished indexing… I even re-started the KDE session.
> 
> Does anyone know why?

Try to disable and then re-enable indexing, see https://git.reviewboard.kde.org/r/107464/. A fix for that issue has already been provided and will be committed soon.
Comment 18 Elias Probst 2012-11-27 10:54:18 UTC
Created attachment 75500 [details]
Screenshot showing the correct Nepomuk places in Dolphin

(In reply to comment #17)
> Try to disable and then re-enable indexing, see
> https://git.reviewboard.kde.org/r/107464/. A fix for that issue has already
> been provided and will be committed soon.

Using this patch now. After restarting Dolphin I could see the correct icons (see attached screenshot).
So this issue only remains for existing KDE profiles…
Comment 19 Frank Reininghaus 2012-11-27 16:17:11 UTC
Thanks. Does that mean that you get the correct 'Places' icons for

a) the new user,
b) the existing user,

or both?
Comment 20 Elias Probst 2012-11-27 17:18:35 UTC
(In reply to comment #19)
> Thanks. Does that mean that you get the correct 'Places' icons for
> 
> a) the new user,
> b) the existing user,
> 
> or both?

Sorry, I wasn't clear enough:

# for a new user:
→ Start KDE
→ Start Dolphin
→ No timeline icons/entries are shown at all
→ Close Dolphin
→ Wait until Nepomuk starts indexing
→ Start Dolphin again
→ *Correct* timeline entries/icons are shown

# for an existing user
→ Start KDE
→ Start Dolphin
→ *Wrong* timeline icons are shown for the timeline entries
→ Close Dolphin
→ Remove 'timeline' entries from ~/.kde4/share/apps/kfileplaces/bookmarks.xml
→ Start Dolphin again
→ *Correct* timeline entries/icons are shown

The question is, whether it is possible to make use of kconf_update to remove the old timeline entries which make use of the wrong icon…?!
Comment 21 Frank Reininghaus 2012-11-29 06:57:29 UTC
(In reply to comment #20)
> The question is, whether it is possible to make use of kconf_update to
> remove the old timeline entries which make use of the wrong icon…?!

The problem is that this would also overwrite any custom icon choices that the user made for these entries, so I think that we cannot do that.

Closing this report again because the issue that has originally been reported here is fixed.
Comment 22 markuss 2012-12-07 12:06:56 UTC
(In reply to comment #16)
> Thinking about it again, I think that there is no good solution for the
> problem. If we change the icons in kfileplaces/bookmarks.xml, we also
> overwrite any custum icons that the user has chosen for the "timeline"
> entries. This is obviously not an option.

And why can't the chronometer icon just be used for migrated accounts? Was the icon removed from Oxygen or what? If yes: Poke the Oxygen team to re-add it.
Comment 23 Frank Reininghaus 2012-12-07 12:16:39 UTC
(In reply to comment #22)
> And why can't the chronometer icon just be used for migrated accounts? 

If I'm not mistaken, the chronometer icon is being used for migrated accounts. If an earlier version stored that icon name in kfileplaces/bookmarks.xml, then it should also be used by a newer version.
Comment 24 Ulrich Lichtenegger 2013-08-19 10:36:36 UTC
Created attachment 81779 [details]
Icons still missing in KDE 4.11
Comment 25 Ulrich Lichtenegger 2013-08-19 10:37:04 UTC
Should this be resolved now? I am using KDE 4.11 fromt the Kubuntu Backports PPA, the Icons are still missing. (see attachment) 

Please note: On the screenshot, you can see that i am using KFaenza Icon Theme. The Problem also exists if i switch to oxygen and restart dolphin. 


Cheers, Uli
Comment 26 Frank Reininghaus 2013-08-21 21:40:03 UTC
(In reply to comment #25)
> Should this be resolved now? I am using KDE 4.11 fromt the Kubuntu Backports
> PPA, the Icons are still missing. (see attachment) 

Please see the earlier comments 15 and 16 in this report. The incorrect icons are stored in a file in your home directory. Upgrading to a newer KDE version does not change anything about that - you have to edit the file. Sorry for the inconvenience.
Comment 27 Ulrich Lichtenegger 2013-08-22 09:34:46 UTC
Thanks for your kind answer, that helped! I deleted all <bookmark...> Entries from the 
HOME/.kde/share/apps/kfileplaces/bookmarks.xml 
file


(In reply to comment #26)
> (In reply to comment #25)
> > Should this be resolved now? I am using KDE 4.11 fromt the Kubuntu Backports
> > PPA, the Icons are still missing. (see attachment) 
> 
> Please see the earlier comments 15 and 16 in this report. The incorrect
> icons are stored in a file in your home directory. Upgrading to a newer KDE
> version does not change anything about that - you have to edit the file.
> Sorry for the inconvenience.
Comment 28 Ulrich Lichtenegger 2013-08-22 09:35:47 UTC
SRY, i meant  <bookmark href="timeline:...."> ;-) It is important that dolphin is closed while doing this. 


(In reply to comment #27)
> Thanks for your kind answer, that helped! I deleted all <bookmark...>
> Entries from the 
> HOME/.kde/share/apps/kfileplaces/bookmarks.xml 
> file
> 
> 
> (In reply to comment #26)
> > (In reply to comment #25)
> > > Should this be resolved now? I am using KDE 4.11 fromt the Kubuntu Backports
> > > PPA, the Icons are still missing. (see attachment) 
> > 
> > Please see the earlier comments 15 and 16 in this report. The incorrect
> > icons are stored in a file in your home directory. Upgrading to a newer KDE
> > version does not change anything about that - you have to edit the file.
> > Sorry for the inconvenience.