Use a better icon for recently accessed items, part 2

I had missed one places where the incorrect icon was used in my
previous commit d7e7ca53bb95c7555bbf107d92b47ac25eda1918.

BUG: 304323
FIXED-IN: 4.9.2